--- a/Web/dataset.html
+++ b/Web/dataset.html
@@ -42,6 +42,7 @@
    		<ul>
    			<li><a href="http://claviusontheweb.it/dataset/snorql/">SPARQL endpoint</a>
    			<li><a href="#">RDF Dump</a> (last update XXXX)
+   			<li><a href="#">VOID file</a>
    		</ul>
    	</p>
    	
