--- a/Web/ontology.html
+++ b/Web/ontology.html
@@ -44,20 +44,22 @@
    			<li><a href="https://www.w3.org/TR/annotation-vocab/">Web Annotation Vocabulary</a> (class <b>oa:Annotation</b>)
    		</ul>
    	</p>
-	<p>CoW-LD employs the following subset of classes and properties given by EDM.</p>
+	<p>CoW-LD employs the following subset of classes:</p>
 	<ul>
 		<li><b>edm:Agent</b> <p>This class comprises people, either individually or in groups, who have the potential to perform intentional actions for which they can beheld responsible;</p></li>
 		<li><b>ore:Aggregation</b> <p>BLA BLA BLA</p>
-		<li><b>edm:providedCHO</b> <p>This class includes the Cultural Heritage objects that Europeana collects descriptions about; within CoW-LD this class is used to model letters;</p></li>
-		<li><b>edm:Place</b> <p>An extent in space, in particular on the surface of the earth, in the pure sense of physics: independent from temporal phenomena and matter (CIDOC CRM);</p></li>
+		<li><b>oa:Annotation</b> <p>BLA BLA BLA</p>
+		<li><b>skos:Concept</b> <p>BLA BLA BLA</p>
 		<li><b>edm:Event</b> <p>An event is a change of states in cultural, social or physical systems, regardless of scale, brought about by a series or group of coherent physical, cultural, technological or legal phenomena (E5 Event in CIDOC CRM) or a set of coherent phenomena or cultural manifestations bounded in time and space (E4 Period in CIDOC CRM).</p></li>
-	
+		<li><b>edm:Place</b> <p>An extent in space, in particular on the surface of the earth, in the pure sense of physics: independent from temporal phenomena and matter (CIDOC CRM);</p></li>
+		<li><b>edm:ProvidedCHO</b> <p>This class includes the Cultural Heritage objects that Europeana collects descriptions about; within CoW-LD this class is used to model letters;</p></li>
+		
 	</ul>	
-	The following figure shows the representation of the entities used through the ontology defined by Europeana.
+	The following figure shows the employed classes and the main relationships.
 	</p>
 	</div>
 	<div class="col-sm-12 text-center"> 
-   		<img src="img/dm.png" alt="Data Model" width="670" height="408">
+   		<img src="img/dm.png" alt="Data Model" width="960" height="720">
    </div>
 </div>
 </font>
