--- a/Web/ontology.html
+++ b/Web/ontology.html
@@ -53,7 +53,7 @@
 		<li><b>edm:Event</b> <p>An event is a change of states in cultural, social or physical systems, regardless of scale, brought about by a series or group of coherent physical, cultural, technological or legal phenomena (E5 Event in CIDOC CRM) or a set of coherent phenomena or cultural manifestations bounded in time and space (E4 Period in CIDOC CRM).</p></li>
 		<li><b>edm:Place</b> <p>An extent in space, in particular on the surface of the earth, in the pure sense of physics: independent from temporal phenomena and matter (CIDOC CRM);</p></li>
 		<li><b>edm:ProvidedCHO</b> <p>This class includes the Cultural Heritage objects that Europeana collects descriptions about; within CoW-LD this class is used to model letters;</p></li>
-		
+		<li><b>edm:WebResource</b> <p>BLA BLA BLA</p>
 	</ul>	
 	The following figure shows the employed classes and the main relationships.
 	</p>
