aggiornato testo index

--- a/Web/contacts.html
+++ b/Web/contacts.html
@@ -42,7 +42,7 @@
     
     
     <h3>Credits</h3>
-    <p>This website design was created by <b>Matteo Fossi</b> for his graduation thesis at <b>University of Pisa</b>.</p> <p>For more questions: <a href=vanzinafan954@gmail.com>vanzinafan954@gmail</a></p>
+    <p>This website design was created by <b>Matteo Fossi</b> for his graduation thesis at <b>University of Pisa</b>.</p> <p>For more questions: <a href="mailto:vanzinafan954@gmail.com">vanzinafan954@gmail.com</a></p>
     </div>
   </div>
 </div>
