--- a/Web/index.html
+++ b/Web/index.html
@@ -40,8 +40,8 @@
    	</div>
    	<div class="col-sm-9 text-justify"> 
    		<p>
-   			The Clavius on the Web Linked Dataset (CoW-LD) contains all the correspondence between the astronomer Christopher Clavius (1537-1612), 
-   			a jesuit mathematician and astronomer and one of the most important characters in the scientific scene of the late 16th century.
+   			The Clavius on the Web Linked Dataset (CoW-LD) contains the correspondence between the astronomer Christopher Clavius (1537-1612), 
+   			a jesuit mathematician and astronomer and one of the most important characters in the scientific scene of the late Sixteenth Century and other important people of the same period.
    		</p>
    		<p>
    			The Clavius'correspondence is owned by The Historical Archives of Pontifical Gregorian University (APUG), in Rome, Italy. 
