--- a/Web/ontology.html
+++ b/Web/ontology.html
@@ -47,13 +47,13 @@
 	<p>CoW-LD employs the following subset of classes:</p>
 	<ul>
 		<li><b>edm:Agent</b> <p>This class comprises people, either individually or in groups, who have the potential to perform intentional actions for which they can beheld responsible;</p></li>
-		<li><b>ore:Aggregation</b> <p>BLA BLA BLA</p>
-		<li><b>oa:Annotation</b> <p>BLA BLA BLA</p>
-		<li><b>skos:Concept</b> <p>BLA BLA BLA</p>
+		<li><b>ore:Aggregation</b> <p>A set of related resources (Aggregated Resources), grouped together such that the set can be treated as a single resource.</p>
+		<li><b>oa:Annotation</b> <p>The class for Web Annotations.</p>
+		<li><b>skos:Concept</b> <p>A SKOS concept can be viewed as an idea or notion; a unit of thought. However, what constitutes a unit of thought is subjective, and this definition is meant to be suggestive, rather than restrictive.</p>
 		<li><b>edm:Event</b> <p>An event is a change of states in cultural, social or physical systems, regardless of scale, brought about by a series or group of coherent physical, cultural, technological or legal phenomena (E5 Event in CIDOC CRM) or a set of coherent phenomena or cultural manifestations bounded in time and space (E4 Period in CIDOC CRM).</p></li>
 		<li><b>edm:Place</b> <p>An extent in space, in particular on the surface of the earth, in the pure sense of physics: independent from temporal phenomena and matter (CIDOC CRM);</p></li>
 		<li><b>edm:ProvidedCHO</b> <p>This class includes the Cultural Heritage objects that Europeana collects descriptions about; within CoW-LD this class is used to model letters;</p></li>
-		<li><b>edm:WebResource</b> <p>BLA BLA BLA</p>
+		<li><b>edm:WebResource</b> <p>To create EDM data providers should follow the EDM Mapping Guidelines.</p>
 	</ul>	
 	The following figure shows the employed classes and the main relationships.
 	</p>
